// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterMenu Component ShallowRender FilterMenu 1`] = `
<Context.Provider
  value={
    {
      "getServerState": undefined,
      "noopCheck": "once",
      "stabilityCheck": "once",
      "store": {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <FilterMenuComponent
    areaOpen={false}
    areas={
      [
        {
          "area": "CENTER",
          "categories": [
            5,
            7,
            9,
            11,
            16,
          ],
        },
        {
          "area": "GM",
          "categories": [
            23,
            24,
            28,
            31,
          ],
        },
        {
          "area": "Fresh",
          "categories": [
            41,
            42,
            43,
            45,
            47,
            48,
          ],
        },
      ]
    }
    categoryMap={[]}
    categoryOpen={false}
    dispatch={[MockFunction]}
    enableAreaFilter={false}
    exceptionOpen={false}
    filterCategories={[]}
    filterExceptions={[]}
    screenName="Worklist"
    selectedWorklistGoal="ITEMS"
    showRollOverAudit={false}
    userFeatures={[]}
    wlSummary={
      [
        {
          "totalCompletedItems": 98,
          "totalItems": 196,
          "worklistEndGoalPct": 100,
          "worklistGoal": "ITEMS",
          "worklistGoalPct": 50,
          "worklistTypes": [
            {
              "completedItems": 50,
              "inProgressItems": 0,
              "todoItems": 50,
              "totalItems": 100,
              "worklistType": "NSFL",
            },
            {
              "completedItems": 25,
              "inProgressItems": 0,
              "todoItems": 25,
              "totalItems": 50,
              "worklistType": "C",
            },
            {
              "completedItems": 7,
              "inProgressItems": 0,
              "todoItems": 7,
              "totalItems": 14,
              "worklistType": "NO",
            },
            {
              "completedItems": 12,
              "inProgressItems": 0,
              "todoItems": 12,
              "totalItems": 24,
              "worklistType": "NS",
            },
            {
              "completedItems": 4,
              "inProgressItems": 0,
              "todoItems": 4,
              "totalItems": 8,
              "worklistType": "NSFQ",
            },
          ],
        },
        {
          "totalCompletedItems": 1,
          "totalItems": 151,
          "worklistEndGoalPct": 100,
          "worklistGoal": "PALLETS",
          "worklistGoalPct": 1,
          "worklistTypes": [
            {
              "completedItems": 1,
              "inProgressItems": 0,
              "todoItems": 151,
              "totalItems": 151,
              "worklistType": "MP",
            },
          ],
        },
        {
          "totalCompletedItems": 11,
          "totalItems": 25,
          "worklistEndGoalPct": 100,
          "worklistGoal": "AUDITS",
          "worklistGoalPct": 44,
          "worklistTypes": [
            {
              "completedItems": 6,
              "inProgressItems": 0,
              "todoItems": 14,
              "totalItems": 20,
              "worklistType": "AU",
            },
            {
              "completedItems": 5,
              "inProgressItems": 0,
              "todoItems": 0,
              "totalItems": 5,
              "worklistType": "RA",
            },
          ],
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`FilterMenu Component ShallowRender FilterMenu with Audits WL Goal 1`] = `
<Context.Provider
  value={
    {
      "getServerState": undefined,
      "noopCheck": "once",
      "stabilityCheck": "once",
      "store": {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <FilterMenuComponent
    areaOpen={false}
    areas={
      [
        {
          "area": "CENTER",
          "categories": [
            5,
            7,
            9,
            11,
            16,
          ],
        },
        {
          "area": "GM",
          "categories": [
            23,
            24,
            28,
            31,
          ],
        },
        {
          "area": "Fresh",
          "categories": [
            41,
            42,
            43,
            45,
            47,
            48,
          ],
        },
      ]
    }
    categoryMap={[]}
    categoryOpen={false}
    dispatch={[MockFunction]}
    enableAreaFilter={false}
    exceptionOpen={false}
    filterCategories={[]}
    filterExceptions={[]}
    screenName="Worklist"
    selectedWorklistGoal="AUDITS"
    showRollOverAudit={false}
    userFeatures={[]}
    wlSummary={
      [
        {
          "totalCompletedItems": 98,
          "totalItems": 196,
          "worklistEndGoalPct": 100,
          "worklistGoal": "ITEMS",
          "worklistGoalPct": 50,
          "worklistTypes": [
            {
              "completedItems": 50,
              "inProgressItems": 0,
              "todoItems": 50,
              "totalItems": 100,
              "worklistType": "NSFL",
            },
            {
              "completedItems": 25,
              "inProgressItems": 0,
              "todoItems": 25,
              "totalItems": 50,
              "worklistType": "C",
            },
            {
              "completedItems": 7,
              "inProgressItems": 0,
              "todoItems": 7,
              "totalItems": 14,
              "worklistType": "NO",
            },
            {
              "completedItems": 12,
              "inProgressItems": 0,
              "todoItems": 12,
              "totalItems": 24,
              "worklistType": "NS",
            },
            {
              "completedItems": 4,
              "inProgressItems": 0,
              "todoItems": 4,
              "totalItems": 8,
              "worklistType": "NSFQ",
            },
          ],
        },
        {
          "totalCompletedItems": 1,
          "totalItems": 151,
          "worklistEndGoalPct": 100,
          "worklistGoal": "PALLETS",
          "worklistGoalPct": 1,
          "worklistTypes": [
            {
              "completedItems": 1,
              "inProgressItems": 0,
              "todoItems": 151,
              "totalItems": 151,
              "worklistType": "MP",
            },
          ],
        },
        {
          "totalCompletedItems": 11,
          "totalItems": 25,
          "worklistEndGoalPct": 100,
          "worklistGoal": "AUDITS",
          "worklistGoalPct": 44,
          "worklistTypes": [
            {
              "completedItems": 6,
              "inProgressItems": 0,
              "todoItems": 14,
              "totalItems": 20,
              "worklistType": "AU",
            },
            {
              "completedItems": 5,
              "inProgressItems": 0,
              "todoItems": 0,
              "totalItems": 5,
              "worklistType": "RA",
            },
          ],
        },
      ]
    }
  />
</Context.Provider>
`;

exports[`FilterMenu Component Test renders the FilterMenu Wrapper component 1`] = `
<View
  style={
    Object {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#0071e9",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#ffffffff",
          "flex": 1,
          "marginLeft": 15,
        }
      }
    >
      [missing "en.WORKLIST.REFINE" translation]
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 0.5,
          "marginRight": 15,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#ffffffff",
            "textAlign": "right",
          }
        }
      >
        [missing "en.WORKLIST.CLEAR" translation]
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.CATEGORY" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
      </Text>
      <Text
        style={
          Object {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        Object {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`FilterMenu Component Test renders the RenderAreaCard function and calls dispatch 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      [missing "en.WORKLIST.AREA" translation]
    </Text>
    <Text
      style={
        {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      [missing "en.WORKLIST.ALL" translation]
    </Text>
  </View>
  <View
    style={
      {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>
</View>
`;

exports[`FilterMenu Component Test renders the filter menu component and calls onPress Function 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "backgroundColor": "#ffffffff",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#0071e9",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "flex-start",
        "width": "100%",
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffffff",
          "flex": 1,
          "marginLeft": 15,
        }
      }
    >
      [missing "en.WORKLIST.REFINE" translation]
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "flex": 0.5,
          "marginRight": 15,
          "opacity": 1,
        }
      }
    >
      <Text
        style={
          {
            "color": "#ffffffff",
            "textAlign": "right",
          }
        }
      >
        [missing "en.WORKLIST.CLEAR" translation]
      </Text>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.AREA" translation]
      </Text>
      <Text
        style={
          {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.CATEGORY" translation]
      </Text>
      <Text
        style={
          {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
      </Text>
      <Text
        style={
          {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.WORKLIST.ALL" translation]
      </Text>
    </View>
    <View
      style={
        {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-down"
        size={25}
      />
    </View>
  </View>
</View>
`;

exports[`FilterMenu Component Test renders the renderAreaCheckbox function 1`] = `
<Icon
  color="#0071e9"
  name="minus-box"
  size={15}
/>
`;

exports[`FilterMenu Component Test renders the renderExceptionTypeCard and ExceptionMap FlatList 1`] = `
[
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "borderBottomColor": "#e0e0e0",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "opacity": 1,
        "paddingHorizontal": 10,
        "paddingVertical": 15,
      }
    }
  >
    <View
      style={
        {
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text>
        [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
      </Text>
      <Text
        style={
          {
            "color": "#9e9e9e",
            "fontSize": 12,
          }
        }
      >
        [missing "en.EXCEPTION.PRICE_OVERRIDE" translation]
      </Text>
    </View>
    <View
      style={
        {
          "flex": 0.1,
        }
      }
    >
      <Icon
        color="#616161"
        name="keyboard-arrow-up"
        size={25}
      />
    </View>
  </View>,
  <RCTScrollView
    data={
      [
        {
          "display": "[missing "en.EXCEPTION.NSFL" translation]",
          "selected": false,
          "value": "NSFL",
        },
        {
          "display": "[missing "en.EXCEPTION.CANCELLED" translation]",
          "selected": false,
          "value": "C",
        },
        {
          "display": "[missing "en.EXCEPTION.NO_SALES" translation]",
          "selected": false,
          "value": "NS",
        },
        {
          "display": "[missing "en.EXCEPTION.NEG_SALES_FLOOR_QTY" translation]",
          "selected": false,
          "value": "NSFQ",
        },
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={[]}
    style={
      {
        "flex": 1,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.NSFL" translation]
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.CANCELLED" translation]
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.NO_SALES" translation]
          </Text>
        </View>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "height": 40,
              "justifyContent": "flex-start",
              "opacity": 1,
            }
          }
          testID="exception button"
        >
          <View
            style={
              {
                "alignItems": "center",
                "justifyContent": "center",
                "width": "10%",
              }
            }
          >
            <Icon
              color="#0071e9"
              name="checkbox-blank-outline"
              size={15}
            />
          </View>
          <Text
            numberOfLines={2}
            style={
              {
                "width": "90%",
              }
            }
          >
            [missing "en.EXCEPTION.NEG_SALES_FLOOR_QTY" translation]
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>,
]
`;

exports[`FilterMenu Component Test the renderExceptionFilterCard component with an item selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="exception button"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-marked-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "width": "90%",
      }
    }
  >
    Nil Pick
  </Text>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionFilterCard component without an item selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="exception button"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="checkbox-blank-outline"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "width": "90%",
      }
    }
  >
    Price Override
  </Text>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionRadioFilterCard component with an item selected 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "flex-start",
      "opacity": 1,
    }
  }
  testID="radio exception button"
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "width": "10%",
      }
    }
  >
    <Icon
      color="#0071e9"
      name="radiobox-marked"
      size={15}
    />
  </View>
  <Text
    numberOfLines={2}
    style={
      {
        "width": "90%",
      }
    }
  >
    Rollover Audits
  </Text>
</View>
`;

exports[`FilterMenu Component Test the renderExceptionTypeCard and calls dispatch() 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#e0e0e0",
      "borderBottomWidth": 1,
      "flexDirection": "row",
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text>
      [missing "en.WORKLIST.EXCEPTION_TYPE" translation]
    </Text>
    <Text
      style={
        {
          "color": "#9e9e9e",
          "fontSize": 12,
        }
      }
    >
      [missing "en.EXCEPTION.PRICE_OVERRIDE" translation]
    </Text>
  </View>
  <View
    style={
      {
        "flex": 0.1,
      }
    }
  >
    <Icon
      color="#616161"
      name="keyboard-arrow-down"
      size={25}
    />
  </View>
</View>
`;

exports[`FilterMenu Component Tests renders the renderAreaFilterCard and calls Dispatch 1`] = `[Function]`;
